--- a/Cascading.org
+++ b/Cascading.org
@@ -30,6 +30,14 @@ def run( D, psi, phi, Actions ):
     theta_C = regression( D_C )
     return [theta_E,theta_C,omega_q]
 
+def runSA( D, phi, Actions ):
+    "Run the cascading algorithm, do the regression over the state-action space, and not only the state space"
+    omega_q = classif_score( map( lambda sasre:sasre[0:2], D ), phi, Actions )
+    q = lambda s,a : dot( omega_q.transpose(), phi( s, a ) )
+    D = shape_for_SA_regression( D, q, phi, Actions )
+    theta_SA = regression( D )
+    return theta_SA
+
 def classif_score( D, phi, Actions ):
     "Returns the omega matrix so that \omega^T\phi(s,a) allows for classification of elements s with labels a"
     #Il s'avere que SCIRL, notre algo d'IRL peut etre adapte pour
@@ -88,6 +96,16 @@ def shape_for_C_regression( D, q, psi, Actions ):
         ss = sasa[2]
         astar = max( [ [ss,x] for x in Actions ], key=lambda sa : q( sa[0], sa[1] ) )[1]
         return [ psi( s ).transpose()[0], (q(s,a) - 0.9*q( ss, astar ))[0]] #FIXME: hard coded gamma
+    return map( hatR, shape_as_sasa( D ) )
+
+def shape_for_SA_regression( D, q, phi, Actions ):
+    "Given data of the form [[s,a,s',eoe],...,[s,a,s',eoe]], returns the matrix [[phi(s,a)^T,q(s,a)-gamma*q(s',a*)],...]"
+    def hatR( sasa ):
+        s = sasa[0]
+        a = sasa[1]
+        ss = sasa[2]
+        astar = max( [ [ss,x] for x in Actions ], key=lambda sa : q( sa[0], sa[1] ) )[1]
+        return [ phi( s, a ).transpose()[0], (q(s,a) - 0.9*q( ss, astar ))[0]] #FIXME: hard coded gamma
     return map( hatR, shape_as_sasa( D ) )
 
 
